# ProjectMercury

./: .gitignore  CMakeLists.txt  README.md  build_server.sh  main.cpp  openinbrowser.sh  openinbrowser_rel.sh
Common/: Color.cpp  Color.h  Vector2.h
Render/: Renderer.h
World/: Component.cpp  Component.h  GameObject.h  GameWorld.cpp  GameWorld.h
include/glad/: glad.h
src/: Engine.h  glad.c  main.cpp
src/Common/: Color.h  Color3.cpp  Color3.h  Color4.cpp  Color4.h  ColorConversion.h  ColorOperators.h  ColorRGB.cpp  ColorRGB.h  ColorRGBA.cpp  ColorRGBA.h  Colors.h  RectF.cpp  RectF.h  Transform.h  Vector2.cpp  Vector2.h
src/Engine/: log.h
src/Engine/Common/: ColorConstants.h  ColorConversion.h  ColorRGB.cpp  ColorRGB.h  ColorRGBA.cpp  ColorRGBA.h  Colors.h  RectF.h  Transform.h  Vector2.cpp  Vector2.h
src/Engine/Core/: Game.h  ServerCommandManager.h  Subsystem.h  SubsystemExecOrder.h
src/Engine/GUI/: ImGUIManager.h
src/Engine/Input/: InputManager.cpp  InputManager.h
src/Engine/Net/: ByteStream.cpp  ByteStream.h  Client.h  ClientNetHandler.h  HostNetHandler.h  Net.h  NetHandler.h  NetManager.cpp  NetManager.h  Packet.h  PacketHandler.h  PacketManager.cpp  PacketManager.h  Peer.cpp  Peer.h  ServerNetHandler.h  TestPacketHandler.h
src/Engine/Render/: OpenGLRenderer.h  Renderer.h  Screen.h  Surface.h
src/Engine/Render/Primitives/: RectGraphic.h
src/Engine/World/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  TestGameObject.h  TransformComponent.h
src/Game/: TestGame.h
src/Input/: InputManager.cpp  InputManager.h
src/Render/: OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Surface.h
src/Render/Primitives/: RectGraphic.cpp  RectGraphic.h
src/World/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  Transform.h  TransformComponent.h
